syntax = "proto3";
package fabchain.fab;

option go_package = "fabchain/x/fab/types";

message Agency {
  uint64 id = 1;
  string owner = 2; 
  string name = 3; 
  string paymentProvider = 4; 
  string paymentAddress = 5; 
  string creator = 6;
}

message EventCreateAgency {
	uint64 id = 1;
}
